--- a/config/database.yml
+++ b/config/database.yml
@@ -61,6 +61,9 @@ development:
 test:
   <<: *default
   database: blog_test
+  pool: 5
+  username: postgres
+  password: admin
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
